# Organizational-Improvement-AI-Agent

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  main.py  pyproject.toml
apps/api/app/: settings.py
apps/api/app/ai/: enums.py  llm.py  prompts.py  router.py  schemas.py
apps/api/app/auth/: deps.py
apps/api/app/consultations/: repository.py
apps/api/app/db/: session.py
apps/api/app/kb/: category_repository.py  doc_repository.py  embedder.py  parser.py  repository.py  retriever.py
apps/api/app/routers/: admin.py  admin_auth.py  consultations.py  departments.py  health.py  knowledge.py
apps/api/app/utils/: crypto.py  pii.py
apps/api/tests/: conftest.py  test_admin.py  test_consultations.py  test_hardening.py  test_health.py  test_knowledge.py  test_parser.py  test_privacy.py  test_rag.py  test_router.py
apps/web/: Dockerfile  package-lock.json  package.json
db/migrations/: 001_init.sql  002_add_messages.sql  003_kb_documents.sql  004_kb_category_vectors.sql  005_knowledge_base_fk_cascade.sql  006_consultation_access_token.sql
db/seeds/: 001_departments.sql
docs/: design-understanding.md  design.md  implementation-roadmap.md  security.md
docs/demo/sample-policies/: anti-harassment-policy.md  company-overview.md  compensation-benefits-policy.md  employee-handbook.md  information-security-acceptable-use.md  management-challenges-brief.md  organizational-themes-anonymous-voice-summary.md  quarterly-strategic-priorities-memo.md  (+1 more)
(+9 files in other folders)
